トップ以外のメニュ

--- a/src/css-summoner/ui/layouts/DocLayout.astro
+++ b/src/css-summoner/ui/layouts/DocLayout.astro
@@ -2,6 +2,7 @@
 import Head from '@layouts/Head.astro'
 import Header from '@layouts/Header.astro'
 import Footer from '@layouts/Footer.astro'
+import NavDrawer from '@components/navigation/NavDrawer.astro'
 import siteData from '@configs/siteData.json'
 export interface Props {
 	title: string
@@ -23,6 +24,7 @@ const mainClass = 'container mx-auto px-global max-w-screen-2xl'
 	<Head title={title} desc={desc} />
 	<body>
 		<Header />
+		<NavDrawer />
 		<main class={mainClass}>
 			<div class='mt-6'></div>
 			<Menu />
