--- a/src/css-summoner/ui/layouts/Layout.astro
+++ b/src/css-summoner/ui/layouts/Layout.astro
@@ -3,6 +3,7 @@ import Footer from '@layouts/Footer.astro'
 import Head from '@layouts/Head.astro'
 import Header from '@layouts/Header.astro'
 import Menu from '@layouts/Menu.astro'
+import NavDrawer from '@components/navigation/NavDrawer.astro'
 import siteData from '@configs/siteData.json'
 
 // スタイルシートのインポート
@@ -23,6 +24,7 @@ const mainClass = 'container mx-auto px-global py-global max-w-screen-2xl'
 	<Head title={title} desc={desc} />
 	<body>
 		<Header />
+		<NavDrawer />
 		<main class={mainClass}>
 			<slot />
 			<Menu />
