--- a/src/css-summoner/ui/layouts/DocLayout.astro
+++ b/src/css-summoner/ui/layouts/DocLayout.astro
@@ -37,6 +37,10 @@ const mainClass = 'container mx-auto px-global max-w-screen-2xl'
 			</div>
 		</main>
 		<Footer />
-		<script src='../../ui/scripts/ui-controller.js'></script>
+		<script>
+			import { initUI } from '@ui/scripts/ui-controller'
+
+			initUI()
+		</script>
 	</body>
 </html>
